--- a/.github/workflows/create_install.yml
+++ b/.github/workflows/create_install.yml
@@ -2,8 +2,8 @@ name: test install
 
 on:
   release:
-    types: [published]
-
+    types: [published, created]
+    
 jobs:
   build:
     name: test 1
@@ -13,7 +13,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: deploy
-          
+      
+      
       - name: 📝 - Test bash
         run: |
           echo "xaaaaaaaaaama "
