--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -1,24 +1,29 @@
-name: test
-on: [push]
-    
+on:
+  push:
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+
+name: Create Release
+
 jobs:
   build:
-    name: test 1
+    name: Create Release
     runs-on: ubuntu-latest
     steps:
-      - name: 🐙 - Taking code from main
-        uses: actions/checkout@v2
-        with:
-          path: deploy
-      
-      
-      - name: GH Release
-        uses: softprops/action-gh-release@v0.1.5
-
-      
-      - name: 📝 - Test bash
-        run: |
-          echo "xaaaaaaaaaama "
-        shell: bash
+      - name: Checkout code
+        uses: actions/checkout@main
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
