--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,10 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      - name: Github Release
-        # You may pin to the exact commit or the version.
-        # uses: elgohr/Github-Release-Action@ed9ebd01a0c57e64e948e7f2ff59c0159e52c204
-        uses: elgohr/Github-Release-Action@v3.1
-        with:
-          # The name of the release to publish
-          release: 0.1
+      - name: Create File
+        uses: finnp/create-file-action@1.0.0
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FILE_NAME: "fileName.txt"
+          FILE_DATA: "file content"
