--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - name: Create local changes
       run: |
         mkdir t
-    - name: Commit & Push changes
-      uses: actions-js/push@v1.1
+    - name: Commit files
+      run: |
+        git config --local user.email "yurilima95@gmail.com"
+        git config --local user.name "yuri-almeid"
+        git commit -m "test" -a
+    - name: Push changes
+      uses: ad-m/github-push-action@master
       with:
-        rebase: true
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.ref }}
