--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       run: |
         ls > t.txt
         git status
+        git add .
     - name: Commit files
       run: |
         git config --local user.email "yurilima95@gmail.com"
