--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           git config --global user.name 'yuri-almeid'
           git config --global user.email 'yurilima95@gmail.com'
+          git add .
           git commit -am "Automated report"
           git push
         env:
