--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
           git config --global user.email 'yurilima95@gmail.com'
           git add .
           git commit -am "Automated report"
+          git remote set-url --push origin https://yuri-almeid:$GITHUB_TOKEN@github.com/yuri-almeid/Test-github-Actions
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
