--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
           zip tl2.zip testlinter.py
           echo ---
           ls
+          git config --global user.name 'yuri-almeid'
+          git config --global user.email 'yurilima95@gmail.com'
           git add .
           git commit -m "test"
           git checkout master
