--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
           git commit -m "test"
           git status
           echo test
+          git branch
           git push
         env:
           DEFAULT_BRANCH: main
